4 module - 4 task - 5 task

--- a/4-module/4-task/index.html
+++ b/4-module/4-task/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Занятие 4: Список друзей</title>
+    <title>Дочерние элементы в DOM Для страницы:</title>
   </head>
 
   <script src="index.js"></script>
