4 module: 5 task (script in html)

--- a/4-module/5-task/index.html
+++ b/4-module/5-task/index.html
@@ -54,11 +54,10 @@
   <script>
     let table = document.body.firstElementChild;
 
-    // for (let i = 0; i < table.rows.length; i++) {
-    //   let row = table.rows[i];
-    //   row.cells[i].style.backgroundColor = 'red';
-    // }
-    colorMake(table);
+    for (let i = 0; i < table.rows.length; i++) {
+      let row = table.rows[i];
+      row.cells[i].style.backgroundColor = 'red';
+    }
   </script>
 </body>
 </html>
