--- a/4-module/5-task/index.html
+++ b/4-module/5-task/index.html
@@ -11,6 +11,7 @@
       padding: 3px 5px;
     }
   </style>
+  <script src = 'index.js'></script>
 </head>
 
 <body>
@@ -52,12 +53,7 @@
     </tr>
   </table>
   <script>
-    let table = document.body.firstElementChild;
-
-    for (let i = 0; i < table.rows.length; i++) {
-      let row = table.rows[i];
-      row.cells[i].style.backgroundColor = 'red';
-    }
+    colorTable()
   </script>
 </body>
 </html>
